--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -22,7 +22,7 @@
 
 	</div>
 
-	<div class="col-md-4" data-aos="fade-left" data-aos-duration="1500">
+	<div class="col-md-4" data-aos="fade-left" align="center" data-aos-duration="1500">
 
 		<div class="business_cat">
 			<%= form_tag businesses_path, method: 'get' do %>
