--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,9 +75,9 @@
   <body>
 
   <div class="container-fluid">
-    <div class="row justify-content-center" align="center" style=" margin-top: 0%; margin-bottom: 0%;">
-   
-          <div class="footer-social-icons">
+    <div class="row" align="left" style=" margin-top: 0%; margin-bottom: 0%;">
+      
+          <div class="footer-social-icons pull-left">
 
               <ul class="social-icons">
 
