--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -8,7 +8,7 @@
 	<div class="col-md-12" align="center">
 		<div  style="width: 300px;">
 			<h1>Peace Peace Family!</h1>
-			<p style="font-size: 15px">Our team at The Black Woman is God Stores works hard daily to try and provide the best user experience possible. If there are any issues with the platform, making an inquiry, or just want to want to show your support please email us or direct messege our instagram. We will do our best to answer all  you promptly </p>
+			<p style="font-size: 15px">Our team at The Black Woman is God Stores works hard daily to try and provide the best user experience possible. If there are any issues with the platform, making an inquiry, or just want to show your support please email us or direct messege our instagram. We will do our best to answer all  you promptly </p>
 			<p><strong>Email:</strong> Theblackwomanisgodstores@gmail.com</p>
 			<a href="https://www.instagram.com/tbwig_stores/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a>
 
