--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -17,7 +17,7 @@
           </div>
         <% end %>
 
-    <div class="col-md-4" align="center" style="color: black; margin-right: 1%;">
+    <div class="col-md-4 center" align="center" style="color: black; margin-right: 1%;">
 
         <div class="row" style="margin-bottom: 3%">
           <div style="color: #D4AF37">
@@ -92,32 +92,35 @@
 
     </div>
 
-    <div class="col-md-7" style="margin-left: 1%">
 
-      <div class="col-md-4">
-        <div class="row">
-          <h4 style="color: #D4AF37">Add all available Colors</h4>
-        </div>
-    
-        <div class="row">
-         
-              <div class="row" align="center">
-                <div >
-                  <%= f.simple_fields_for :color_variants do |builder| %>
-                   <%= render 'color_variant_fields', f: builder %>   
-                  <% end %>      
+    <div class="col-md-3 center" align="center" style="margin: 1%">
+        <div>
+          <div class="row">
+            <h4 style="color: #D4AF37">Add all available Colors</h4>
+          </div>
+      
+          <div class="row">
+           
+                <div class="row" align="center">
+                  <div >
+                    <%= f.simple_fields_for :color_variants do |builder| %>
+                     <%= render 'color_variant_fields', f: builder %>   
+                    <% end %>      
+                  </div>
+      
                 </div>
-    
-              </div>
 
-              <div class="row">
-                <%= link_to_add_association "Add Color", f, :color_variants, :class => "btn", :style => "background-color: #D4AF37; color: black"  %>
-              </div>
+                <div class="row">
+                  <%= link_to_add_association "Add Color", f, :color_variants, :class => "btn", :style => "background-color: #D4AF37; color: black"  %>
+                </div>
 
+          </div>
         </div>
-      </div>
+    </div>
 
-      <div class="col-md-4" style="margin-left: 20%">
+    <div class="col-md-3 center" align="center" style="margin: 1%">
+
+      <div align="center">
         <div class="row">
           <h4 style="color: #D4AF37">Add all available Sizes</h4>
         </div>
@@ -134,7 +137,7 @@
           </div>
 
           <div class="row">
-                      <%= link_to_add_association "Add size", f, :size_variants, :class => "btn", :style => "background-color: #D4AF37; color: black" %>
+              <%= link_to_add_association "Add size", f, :size_variants, :class => "btn", :style => "background-color: #D4AF37; color: black" %>
           </div>
 
         </div>
