--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -91,10 +91,10 @@
 
 
       <div class="row" id="homeproducts" style="margin-top: 15%; margin-bottom: 4%" align="center" >
-        <div class="col-xs-6" align="center" data-aos="fade-up-right" data-aos-duration="2000">
+        <div class="col-md-5" align="center" data-aos="fade-up-right" data-aos-duration="2000">
           <img src="https://s3.amazonaws.com/tbwigsassets/assets/STORE+GOLD.png" style="width: 250px; height: 225px;" >
         </div>
-        <div class="col-xs-6" align="center" style="padding-top: 5%; color: #D4AF37; width: 500px;" data-aos="fade-up-left" data-aos-duration="2000">
+        <div class="col-md-5" align="center" style="padding-top: 5%; color: #D4AF37; width: 500px;" data-aos="fade-up-left" data-aos-duration="2000">
           <h3><strong> &nbsp Welcome to the Black Social Marketplace</strong></h3>
           <ul style="list-style-type: none">
             <li>Upload and sell your Products.</li>
@@ -143,10 +143,10 @@
 
 
       <div class="row" id="homeproducts" style="margin-top: 15%; margin-bottom: 3%" align="center" >
-        <div class="col-xs-6" align="center" data-aos="fade-up-right" data-aos-duration="2000">
+        <div class="col-md-5" align="center" data-aos="fade-up-right" data-aos-duration="2000">
             <img src="https://s3.amazonaws.com/tbwigsassets/assets/blkbuzservcblkgold2.png" style="width: 250px; height: 250px" >
         </div>
-        <div class="col-xs-6" align="center" style="padding-top: 3%; color: #D4AF37; width: 500px;" data-aos="fade-up-left" data-aos-duration="2000">
+        <div class="col-md-5" align="center" style="padding-top: 3%; color: #D4AF37; width: 500px;" data-aos="fade-up-left" data-aos-duration="2000">
           <h3><strong> &nbsp Advertise your business with us!</strong></h3>
           <ul style="list-style-type: none">
             <li>Subscribe and Promote your Business with us!</li>
