--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,8 +43,8 @@
   border-radius: 5px;
   border-style: solid;
   border-color: black;
-  width: 400px;
-  height: 400px;
+  width: 60%;
+  height: 60%;
 }
 
 #conversation-body {
