--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
   <!-- ################# Bio ################# -->
 <div class="row">
   <div class="col-md-5" align="center">
-    <div>
+    <div style="width: 70%; height: auto">
         <% if @user.id == current_user.id %>
         <% if @user.avatar.attached? %>
             <%= image_tag (@user.avatar), id: "profile_pic" %> 
@@ -62,7 +62,7 @@
 
     <div class="row">
         <h3><strong>Bio</strong></h3>
-      <div style="width: 350px">
+      <div style="width: 100%">
          <p class="" style="font-size: 15px; word-wrap: break-word;"><%= @user.bio %></p>
       </div>
         
@@ -74,18 +74,20 @@
 
   <!-- ################# Business ################# -->
 
-<div class="row" style="margin-top: 10%; color: #D4AF37;" align="center">
-  <% if @user.id == current_user.id %>
-    <h2 class="font-heading text-center">My Business</h2>
-    <% else %>
-    <h3 class="font-heading text-center"><%= @user.username %>'s Business</h3>
-  <% end %>
-</div> 
+
 
 <div class="row" align="center">
   <div class="col-md-12">
     <% @businesses.each do |business| %>
       <% if business.user.id == @user.id %>
+
+        <div class="row" style="margin-top: 10%; color: #D4AF37;" align="center">
+          <% if @user.id == current_user.id %>
+            <h2 class="font-heading text-center">My Business</h2>
+            <% else %>
+            <h3 class="font-heading text-center"><%= @user.username %>'s Business</h3>
+          <% end %>
+        </div> 
 
           <div class="col-md-12" align="center">
             <%= image_tag (business.artwork), class: "product-overview-image", style: "width: 400px; height: 400px;" %>
@@ -101,7 +103,7 @@
                 <ul class="dropdown-menu" role="menu">
                   <li><%= link_to "View", business, class: "btn btn-link", style: "color: #D4AF37" %></li>
                   <li><%= link_to "Edit", edit_business_path(business), class: "btn btn-link", style: "color: #D4AF37" %></li>
-                  <li><%= link_to 'Delete', business, method: :delete, data: { confirm: "Are you sure? Remember to cancel subscription please email Theblackwomanisgodstores@gmail.com. You Are only allowed ONE business on the site if subscribed" }, class: "btn btn-link", style: "color: #D4AF37" %></li>
+                  <li><%= link_to 'Delete', business, method: :delete, data: { confirm: "Are you sure? Remember to cancel subscription please visit your User settings. You Are only allowed ONE business on the site if subscribed" }, class: "btn btn-link", style: "color: #D4AF37" %></li>
                 </ul>
 
               </div>
