--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,7 +26,7 @@
 
     <div>
       <div class="row" style="margin-bottom: 10%">
-        <div style="background-color: #D4AF37; border-radius: 10px; color: black; padding: 10px">
+        <div style="background-color: #D4AF37; border-radius: 10px; color: black; padding: 10px; width: 80%">
           <div class="row" align="center"> 
 
             <div class="col-md-6">
