--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,11 +22,11 @@
     </div>
   </div>
 
-  <div class="col-md-5" align="center" style="color: #D4AF37; width: 500px; margin-left: 10%; margin-top: 5%;">
+  <div class="col-md-5" align="center" style="color: #D4AF37; margin-left: 10%; margin-top: 5%;">
 
    
       <div class="row" style="margin-bottom: 10%">
-        <div style="background-color: #D4AF37; border-radius: 10px; color: black; padding: 10px; width: 80%">
+        <div style="background-color: #D4AF37; border-radius: 10px; color: black; padding: 10px; width: 50%">
           <div class="row" align="center"> 
 
             <div class="col-md-6">
