--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,21 +1,14 @@
 
 <div class="row" data-aos="fade-up" data-aos-duration="1500">
     <div class="center">
-      <h2 style="color: #D4AF37">Followers</h2>
+      <h2 style="color: #D4AF37">Following</h2>
     </div>
 
     <div id="no-more-tables">
 
     <table class="col-md-12 table table-condensed" align="center">
-      <tr style="color: #D4AF37; font-size: 20px" align="center">
-        <th class="center" style="margin: 10%">User</th>
-        <th class="center" style="margin: 10%">Username</th>
-        <th class="center" style="margin: 10%">Bio</th>
-        <th class="center" style="margin: 10%">Follow/Unfollow</th>
 
-
-      </tr>
-        <% @following.each do |f| %> 
+<% @following.each do |f| %> 
         <tr >
           <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag f.avatar, style: "width: 100px; height:100px" %></td>
           <td class="center" align="center"><%= link_to f.username, user_path(f.id), :style => "color: #D4AF37;" %></td>
@@ -36,10 +29,10 @@
         </tr>
 
     </table>
-      <% end %>
+<% end %>
     </div>
 
 </div>
 
-
+<br>
 
