--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,10 +5,10 @@
 <div class="row">
 
   <div class="col-md-6"  style="color: #D4AF37" data-aos="fade-right" data-aos-duration="1000">
-    <div align="center" style="border-color: #D4AF37; border-width: 1px; border-style: solid; border-radius: 5px; padding:2%; width: 350px; height: auto; margin: 5%;">
+    <div align="center" style="border-color: #D4AF37; border-width: 1px; border-style: solid; border-radius: 5px; padding:2%; width: 45%; height: auto; margin: 5%;">
         <div  style="border-color: #D4AF37; border-width: 1px; border-style: solid; border-radius: 5px; padding:1%;">
           <div>
-            <%= image_tag @product.picture, style: "width: 310px; height: 249px; border-radius: 5px;" %>
+            <%= image_tag @product.picture, style: "width: 65%; height: 65%; border-radius: 5px;" %>
           </div>
         </div>
 
@@ -23,7 +23,7 @@
           <%= link_to "Buy It Now!", new_product_order_path(@product), class: "btn", style: "margin-top: 3%; background-color: #D4AF37; color:black ", data: { no_turbolink: true } %>
         </div>
 
-        <div class="row" style="background-color: #D4AF37; padding-top: 5%; padding-bottom: 5%; width: 350px">
+        <div class="row" style="background-color: #D4AF37; padding-top: 5%; padding-bottom: 5%; width: 100%">
           <div class="col-md-6 left" style="margin-top: 12px;">
               <% pre_vote = @product.votes.find { |vote| vote.user_id == current_user.id} %>
               <% if pre_vote %>
