--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -47,7 +47,7 @@
     </div>
 
     <div class="row" style="margin-bottom: 100px">
-      <div style="width: 700px">
+      <div style="width: 70%">
         <div class="row">
             <div class="col-md-6" style="font-size: 25px; color: #D4AF37; margin-top: 3%" >
               <h4> Colors Available </h4> 
