--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -30,8 +30,8 @@
 
 <div class="row" style="margin: 1%; margin-bottom: 5%;">
 
-	<div class="col-md-4" align="center" style="color: #D4AF37; width: 75%; height:auto;" data-aos="fade-right" data-aos-duration="1000">
-	    <div style="border-color: #D4AF37; border-width: 1px; border-style: solid; border-radius: 5px; padding:2%; width: 70%; height: auto; margin: 5%;">
+	<div class="col-md-4"  style="color: #D4AF37;" data-aos="fade-right" data-aos-duration="1000">
+	    <div align="center" style="border-color: #D4AF37; border-width: 1px; border-style: solid; border-radius: 5px; padding:2%; width: 90%; height: auto; margin: 5%;">
 	        <div  style="border-color: #D4AF37; border-width: 1px; border-style: solid; border-radius: 5px; padding:1%;">
 	          <div>
 	            <%= image_tag @product.picture, style: "width: 60%; height: 40%; border-radius: 5px;" %>
