--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,4 +1,4 @@
-<div align="center" style="color: #D4AF37; margin: 2%">
+<div align="center" style="color: #D4AF37; margin-bottom: 2%">
 	<h2><strong>Place Your Order For:</strong><br> <%= @product.title %></h2>
 </div>
 
