--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -91,16 +91,18 @@
 
 
       <div class="row"  style="margin-top: 15%; margin-bottom: 4%" align="center" >
-        <div class="col-md-5 pull-left" align="center " data-aos="fade-up-right" data-aos-duration="2000">
-          <img src="https://s3.amazonaws.com/tbwigsassets/assets/STORE+GOLD.png" style="width: 250px; height: 225px;" >
-        </div>
-        <div class="col-md-5 pull-right" align="center" style="padding: 5%; color: #D4AF37; width: 60%;" data-aos="fade-up-left" data-aos-duration="2000">
-          <h3><strong> &nbsp Welcome to the Black Social Marketplace</strong></h3>
-          <ul style="list-style-type: none">
-            <li>Upload and sell your Products.</li>
-            <li>Follow/Unfollow your Clients and other Business Owners. </li>
-            <li>Grow your Business & Develop your Network!</li>
-          </ul>
+        <div class="col-md-12">
+            <div class="col-md-4 " align="center" style="margin-left: 5%" data-aos="fade-up-right" data-aos-duration="2000">
+              <img src="https://s3.amazonaws.com/tbwigsassets/assets/STORE+GOLD.png" style="width: 50%; height: 50%;" >
+            </div>
+            <div class="col-md-4" align="center" style="padding: 5%; color: #D4AF37; width: 60%;" data-aos="fade-up-left" data-aos-duration="2000">
+              <h3><strong> Welcome to the Black Social Marketplace</strong></h3>
+              
+                <p>Upload and sell your Products.</p>
+                <p>Follow/Unfollow your Clients and other Business Owners. </p>
+                <p>Grow your Business & Develop your Network!</p>
+              
+            </div>          
         </div>
       </div>
 
@@ -143,17 +145,20 @@
 
 
       <div class="row" id="homeproducts" style="margin-top: 15%; margin-bottom: 3%" align="center" >
-        <div class="col-md-5" align="center" data-aos="fade-up-right" data-aos-duration="2000">
-            <img src="https://s3.amazonaws.com/tbwigsassets/assets/blkbuzservcblkgold2.png" style="width: 250px; height: 250px" >
+        <div class="col-md-12">
+            <div class="col-md-5" align="center" data-aos="fade-up-right" data-aos-duration="2000">
+                <img src="https://s3.amazonaws.com/tbwigsassets/assets/blkbuzservcblkgold2.png" style="width: 40%; height: 40%" >
+            </div>
+            <div class="col-md-5" align="center" style="padding-top: 3%; color: #D4AF37; width: 50%;" data-aos="fade-up-left" data-aos-duration="2000">
+              <h3><strong> Advertise your business with us!</strong></h3>
+              
+                <p>Subscribe and Promote your Business with us!</p>
+                <p>We make finding Black Businesses in our <br>Network Across the United States and soon the World easy.</p>
+                <p>Join our Expanding Community!</p>
+             
+            </div>          
         </div>
-        <div class="col-md-5" align="center" style="padding-top: 3%; color: #D4AF37; width: 500px;" data-aos="fade-up-left" data-aos-duration="2000">
-          <h3><strong> &nbsp Advertise your business with us!</strong></h3>
-          <ul style="list-style-type: none">
-            <li>Subscribe and Promote your Business with us!</li>
-            <li>We make finding Black Businesses in our Network Across the United States and soon the World easy.</li>
-            <li>Join our Expanding Community!</li>
-          </ul>
-        </div>
+
       </div>
   
       <div class="row" align="center" data-aos="zoom-in" data-aos-duration="2000">
