--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -125,7 +125,7 @@
                           <div class="caption" align="center" style=" width: 250px; height: 200px; padding: 3%; word-wrap: break-word; color: #D4AF37 !important; font-size: 17px; opacity: 0.85" >
                             <h4><%= product.title %></h4>
                             <h3><strong><%= number_to_currency(product.price) %></strong></h3>
-                            <p><%= link_to product.category.name, category_path(product.category), :style => "color: #D4AF37" %></p>
+                            <p><%= product.category.name %></p>
                             <p><em>Seller:</em><br> <%= link_to product.user.username, user_path(product.user), :style => "color: #D4AF37" %></p>
                           </div>
                       </div>
