--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -77,7 +77,7 @@ body {
 }
 
 .nav{
-  font-size: 11px;
+  font-size: 15px;
 }
 
 .toplogo{
@@ -227,53 +227,33 @@ a:hover {
   margin-top: 1.4%;
 }
 
-.promo_b{
-  height: 91.5px !important;
-  width: 98%
-}
-
-.promo_a{
-  height: 91.5px !important;
-  width: 98%
-}
-
 #signup{
   background-color: #D4AF37;
   border-radius: 25px;
-  padding-left: 40px;
-
   margin-bottom: 30px;
   margin-top: 4%;
   padding: 30px;
   background-opacity: 0.35;
-  z-index: -100;
-  
   color: black;
 }
 
 #login{
   background-color: #D4AF37;
   border-radius: 25px;
-  padding-left: 40px;
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top: 4%;
-  padding: 30px;
+  margin: 10%;
+  padding: 5%;
   background-opacity: 0.35;
-  z-index: -100;
-  width: 500px;
+  width: 60%;
   color: black
 }
 
 #edit{
   background-color: #D4AF37;
   border-radius: 25px;
-  padding-left: 40px;
-  margin-left: 50px;
-  margin-right: 50px;
-  padding: 30px;
+  margin:10%;
+  padding: 3%;
   background-opacity: 0.35;
-  z-index: -100;
+
   color: black
 }
 
