--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -139,11 +139,11 @@
 
       <br> <h5> If help is needed please contact us, Our response will be prompt <%= link_to "Contact Us", pages_contact_path %>.</h5>
 
-        <p><%= button_to "Unsubscribe Your Business", unsubscribe_path(current_user), class: "btn", style: "background-color: black; color: #D4AF37;", data: { confirm: "Are you sure? There are no refunds and your business will be removed from The Black Woman Is God Stores!" }, method: :delete %></p>
+        <p><%= button_to "Unsubscribe Your Business", unsubscribe_path(current_user), class: "btn", style: "background-color: black; color: #D4AF37; width: 30%", data: { confirm: "Are you sure? There are no refunds and your business will be removed from The Black Woman Is God Stores!" }, method: :delete %></p>
 
         <h3><strong>Cancel my account</strong></h3>
 
-        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn", style: "background-color: black; color: #D4AF37;", data: { confirm: "Are you sure?" }, method: :delete %></p>
+        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), class: "btn", style: "background-color: black; color: #D4AF37;", data: { confirm: "Are you sure? There is no going back" }, method: :delete %></p>
 
         <%= link_to "Back", :back, :style => "color: black; " %>
     </div>
