--- a/app/views/orders/sales.html.erb
+++ b/app/views/orders/sales.html.erb
@@ -23,7 +23,7 @@
         <% @orders.each do |order| %>
         <% unless order.shipped == true  %>
           <tr class="business_table">
-            <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag order.product.picture %></td>
+            <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag order.product.picture, style: "width: 50%; height: 50%" %></td>
             <td class="center"><%= order.product.title %></td>
             <td class="center"><%= number_to_currency(order.product.price) %></td>
             <td class="center"><%= number_to_currency(order.product.shipping_cost) %></td>
@@ -80,7 +80,7 @@
       <% @orders.each do |order| %>
         <% if order.shipped == true  %>
         <tr class="business_table">
-          <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag order.product.picture %></td>
+          <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag order.product.picture, style: "width: 50%; height: 50%" %></td>
           <td class="center"><%= order.product.title %></td>
           <td class="center"><%= number_to_currency(order.product.price) %></td>
           <td class="center"><%= number_to_currency(order.product.shipping_cost) %></td>
