--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -90,9 +90,9 @@
 
 
 
-      <div class="row"  style="margin-top: 15%; margin-bottom: 4%" align="center" >
+      <div class="row" style="margin-left: 4%" style="margin-top: 15%; margin-bottom: 4%" align="center" >
         <div class="col-md-12">
-            <div class="col-md-4 " align="center" data-aos="fade-up-right" data-aos-duration="2000">
+            <div class="col-md-4 " align="center"  data-aos="fade-up-right" data-aos-duration="2000">
               <img src="https://s3.amazonaws.com/tbwigsassets/assets/STORE+GOLD.png" style="width: 50%; height: 50%;" >
             </div>
             <div class="col-md-4" align="center" style="padding: 5%; color: #D4AF37; width: 60%;" data-aos="fade-up-left" data-aos-duration="2000">
