business index pic

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -144,12 +144,12 @@ a:hover {
   
 }
 
-#thumbz{
-  height: 50%;
-  width: 50% !important;
-  border-radius: 5px;
+// #thumbz{
+//   height: 50%;
+//   width: 50% !important;
+//   border-radius: 5px;
   
-}
+// }
 
 #prod_row{
   // background-image: url("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/bacground1440.png");
