--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -5,14 +5,14 @@
     <div class="col-md-5" style="margin: 3%">
       <h2 style="color: #D4AF37;"> <%= @business.title %></h2>
       <h2><%= link_to @business.user.username, user_path(@business.user), :style => "color: #D4AF37" %></h2>
-      <%= image_tag @business.artwork, :style => "width: 340px; height: 400px; margin: 5%;" %> 
+      <%= image_tag @business.artwork, :style => "width: 75%; height: 75%; margin: 5%;" %> 
       
     </div>
 
     <div class="col-md-5" style="margin: 3%">
 
       <div class="row">
-        <div style="width: 100%; color: #D4AF37; background-color: rgba(212,175,55, 0.1); padding: 2%; width: 450px; word-wrap: break-word; margin-bottom: 5%; border-radius: 5px; ">
+        <div style="width: 100%; color: #D4AF37; background-color: rgba(212,175,55, 0.1); padding: 2%; width: 100%; word-wrap: break-word; margin-bottom: 5%; margin-top: 5%; border-radius: 5px; ">
           <h3>Description</h3>
           <p style="font-size: 18px"><%= @business.description %></p>
           <p><strong><%= @business.business_category.name %></strong></p>
@@ -20,7 +20,7 @@
 
       </div>
 
-      <div class="row" style="width: 100%; color: #D4AF37">
+      <div class="row" style="width: 100%; margin-top: 5%; margin-bottom: 5%; color: #D4AF37">
         <p><strong>Address:</strong><%= @business.address %></p>
         <p><strong>City:</strong><%= @business.city %></p>
         <p><strong>State:</strong><%= @business.state.name %></p>
