--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -90,7 +90,7 @@
 
 
 
-      <div class="row" style="margin-left: 3%" style="margin-top: 15%; margin-bottom: 4%" align="center" >
+      <div class="row" style="margin-top: 15%; margin-bottom: 4%" align="center" >
         <div class="col-md-12">
             <div class="col-md-4 " align="center"  data-aos="fade-up-right" data-aos-duration="2000">
               <img src="https://s3.amazonaws.com/tbwigsassets/assets/STORE+GOLD.png" style="width: 50%; height: 50%;" >
