--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -63,7 +63,7 @@
 
         <div class="col-md-9" style="padding: 20px;" align="center">
                 <% @products.each do |product| %>
-                  <% unless product.price >= 1 %>
+                  <% if product.price >= 1 %>
                   
 
                     <div  id="t_backdrop">
