--- a/app/views/orders/purchases.html.erb
+++ b/app/views/orders/purchases.html.erb
@@ -19,6 +19,7 @@
       </tr>
 
       <% @orders.each do |order| %>
+       <% unless order.product == !present? %>
         <tr class="business_table">
     <!--       <td class="center" align="center" style="background-color: #D4AF37;"><%#= image_tag order.product.picture, style: "width: 55%; height: 55%" %></td> -->
           <td class="center"><%= link_to order.product.title, product_path(order.product), style: "color: #D4AF37" %></td>
@@ -30,6 +31,7 @@
           <td class="center"><%= order.quantity %></td>
           <td class="center"><%= order.created_at.strftime("%B %-d, %Y") %></td>
         </tr>
+        <% end %>
       <% end %>
     </table>
 
