--- a/app/views/orders/purchases.html.erb
+++ b/app/views/orders/purchases.html.erb
@@ -21,7 +21,7 @@
       <% @orders.each do |order| %>
         <tr class="business_table">
     <!--       <td class="center" align="center" style="background-color: #D4AF37;"><%#= image_tag order.product.picture, style: "width: 55%; height: 55%" %></td> -->
-          <td class="center"><%= link_to order.product.try(:title), product_path(order.product), style: "color: #D4AF37" %></td>
+          <td class="center"><%= link_to order.product.try(:title), style: "color: #D4AF37" %></td>
           <td class="center"><%= number_to_currency(order.product.price) %></td>
           <td class="center"><%= number_to_currency(order.product.shipping_cost) %></td>
           <td class="center"><%= order.seller.username %> <br>Email: <%= order.seller.email %> <br> Message: <%= link_to order.seller.username, conversations_path(author_id: current_user.id, receiver_id: order.seller.id), method: :post, style: "color: #D4AF37" %></td>
