--- a/app/views/orders/purchases.html.erb
+++ b/app/views/orders/purchases.html.erb
@@ -20,10 +20,10 @@
 
       <% @orders.each do |order| %>
         <tr class="business_table">
-          <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag order.product.try(:picture) %></td>
-          <td class="center"><%= order.product.try(:title) %></td>
-          <td class="center"><%= number_to_currency(order.product.try(:price)) %></td>
-          <td class="center"><%= number_to_currency(order.product.try(:shipping_cost)) %></td>
+          <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag order.product.picture %></td>
+          <td class="center"><%= order.product.title %></td>
+          <td class="center"><%= number_to_currency(order.product.price) %></td>
+          <td class="center"><%= number_to_currency(order.product.shipping_cost) %></td>
           <td class="center"><%= order.seller.username %> <br>Email: <%= order.seller.email %> <br> Message: <%= link_to order.seller.username, conversations_path(author_id: current_user.id, receiver_id: order.seller.id), method: :post, style: "color: #D4AF37" %></td>
           <td class="center"><%= order.color %></td>
           <td class="center"><%= order.size %></td>
