--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -93,7 +93,7 @@
               </div> 
     </div>
 
-    <div class="row" style="margin-left: 5%">
+    <div class="row" align="center">
       <%= paginate @products %>
     </div>
     
