mass update (functionality)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,8 +62,10 @@ body {
   // font-family: 'Squada One', cursive;
   // font-family: 'Monoton', cursive;
   // font-family: 'Gugi', cursive;
-  font-family: 'Iceland', cursive;
-  font-size: 20px;
+  // font-family: 'Iceland', cursive;
+  // font-family: 'Open Sans', sans-serif;
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 15px;
   // font-family: 'Major Mono Display', monospace;
   font-weight: bold;
   // font-family: 'Text Me One', sans-serif;
