--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -92,7 +92,22 @@
 		
 		
 
-              <h3 style="color: #D4AF37;">Please Enter Your Shipping Address:</h3>
+              <h3 style="color: #D4AF37;">Please Enter Your Shipping Information:</h3>
+              
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <h4 style="color: #D4AF37"><strong>First Name:</strong></h4>
+                    <%= f.text_field :shipping_name, class: "form-control" %>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                      <h4 style="color: #D4AF37"><strong>Last Name:</strong></h4>
+                      <%= f.text_field :shipping_last_name, class: "form-control" %>
+                    </div>
+                </div>
+              </div>
 
               <div class="row">
                 <div class="col-md-6">
@@ -134,14 +149,14 @@
               <div class="row">
                 <div class="col-md-6">
                      <div class="form-group" style="color: black">
-                      <%= f.label :color, :style => "color: #D4AF37;" %>
+                      <%= f.label :color, :style => "color: #D4AF37;" %><br>
                       <%= f.select :color, options_for_select(@product.color_variants.pluck(:color)), :prompt => "Choose a Color", :class => "form-control", :style => "color: black!;" %>
 
                     </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group" style="color: black">
-                    <%= f.label :size, :style => "color: #D4AF37;" %>
+                    <%= f.label :size, :style => "color: #D4AF37;" %><br>
                     <%= f.select :size, options_for_select(@product.size_variants.pluck(:size)), :prompt => "Choose a Size", :class => "form-control", :style => "color: black!;" %>
                   </div>
                 </div>
