--- a/app/views/orders/sales.html.erb
+++ b/app/views/orders/sales.html.erb
@@ -32,7 +32,7 @@
             <td class="center"><%= order.try(:size) %></td>
             <td class="center"><%= order.buyer.username %> <br>Email: <%= order.buyer.email %> <br> Message: <%= link_to order.buyer.username, conversations_path(author_id: current_user.id, receiver_id: order.buyer.id), method: :post, style: "color: #D4AF37" %></td>
             <td class="center"><%= order.quantity %></td>
-            <td class="center"><strong>Address:</strong> <%= order.address %><br> <strong>City:</strong> <%= order.city %><br> <strong>State:</strong> <%= order.state %><br> <strong>Zip:</strong> <%= order.zip %><br> <strong>Country:</strong> <%= order.country %>  </td>
+            <td class="center"> <strong>First Name:</strong> <%= order.shipping_name %><br> <strong>Last Name:</strong> <%= order.shipping_last_name %><br> <strong>Address:</strong> <%= order.address %><br> <strong>City:</strong> <%= order.city %><br> <strong>State:</strong> <%= order.state %><br> <strong>Zip:</strong> <%= order.zip %><br> <strong>Country:</strong> <%= order.country %>  </td>
             <td class="center"><%= order.created_at.strftime("%B %-d, %Y") %></td>
 
             <td>
@@ -87,7 +87,7 @@
           <td class="center"><%= order.product.title %></td>
           <td class="center"><%= number_to_currency(order.product.price) %></td>
           <td class="center"><%= number_to_currency(order.product.shipping_cost) %></td>
-          <td class="center"><%= order.buyer.username %> <br>Email: <%= order.buyer.email %> <br> Message: <%= link_to order.seller.username, conversations_path(author_id: current_user.id, receiver_id: order.buyer.id), method: :post, style: "color: #D4AF37" %></td>
+          <td class="center"><strong>First Name:</strong> <%= order.shipping_name %><br> <strong>Last Name:</strong> <%= order.shipping_last_name %><br><%= order.buyer.username %> <br>Email: <%= order.buyer.email %> <br> Message: <%= link_to order.seller.username, conversations_path(author_id: current_user.id, receiver_id: order.buyer.id), method: :post, style: "color: #D4AF37" %></td>
           <td class="center"><%= order.color %></td>
           <td class="center"><%= order.size %></td>
           <td class="center"><%= order.quantity %></td>
