--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,37 +1,39 @@
 
-<div class="row" data-aos="fade-up" data-aos-duration="1500">
-    <div class="center">
-      <h2 style="color: #D4AF37">Followers</h2>
-    </div>
+<div class="center">
+   <h2 style="color: #D4AF37">Followers</h2>
+</div>
 
-    <div id="no-more-tables">
+<% if @user_followers.any? %>
+  <% @user_followers.each do |f| %> 
+    <div class="row" data-aos="fade-up" data-aos-duration="1500">
+      
+      <table class="col-md-12 table" align="center">
 
-    <table class="col-md-12 table table-condensed" align="center">
-
-<% @followers.each do |f| %> 
-        <tr >
+        <tr>
           <td class="center" align="center" style="background-color: #D4AF37;"><%= image_tag f.avatar, style: "width: 100px; height:100px" %></td>
-          <td class="center" align="center"><%= link_to f.username, user_path(f.id), :style => "color: #D4AF37;" %></td>
-          <td class="center" align="center" style="word-wrap: break-word; color: #D4AF37"><%= f.bio %></td>
-          <td>
-          	
-            <% if current_user.follows?(f) %>
+                <td class="center" align="center"><%= link_to f.username, user_path(f.id), :style => "color: #D4AF37;" %></td>
+                <td class="center" align="center" style="word-wrap: break-word; color: #D4AF37"><%= f.bio %></td>
+                <td>
+                	
+                  <% if current_user.following?(f) %>
 
-              <%= link_to('Unfollow', unfollow_user_path(f.id), :style => "color: black; background-color: #D4AF37", class: "btn", method: :post) %>
+                    <%= link_to('Unfollow', unfollow_user_path(f.id), :style => "color: black; background-color: #D4AF37", class: "btn", method: :post) %>
 
-                  <% else %>
+                        <% else %>
 
-              <%= link_to('Follow', follow_user_path(f.id), :style => "color: black; background-color: #D4AF37", class: "btn", method: :post) %>
+                    <%= link_to('Follow', follow_user_path(f.id), :style => "color: black; background-color: #D4AF37", class: "btn", method: :post) %>
 
-            <% end %>
+                  <% end %>
           </td>
 
-        </tr>
-    </table>
-<% end %>
+            </tr>
+          </table>
     </div>
+  <% end %>
+<% end %>
 
-</div>
+
+
 
 <br>
 
