--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+ 
   <!-- ################# Bio ################# -->
 <div class="row">
   <div class="col-md-5" align="center">
@@ -19,7 +20,35 @@
           
               <%= link_to 'Message', conversations_path(author_id: current_user.id, receiver_id: @user.id), method: :post %>         
         <% end %>
+        
     </div>
+  </div>
+
+  <div style="margin-top: 5%; margin-bottom: 5%">
+    <!-- The text field -->
+    <input type= value="" id="myInput" style="color: black;">
+
+    <!-- The button used to copy the text -->
+    <button onclick="myFunction()" style="background-color: #D4AF37; color: black">Copy text</button>
+
+    <script type="text/javascript">
+      document.getElementById("myInput").value = window.location.href
+      function myFunction() {
+        /* Get the text field */
+        var copyText = document.getElementById("myInput");
+        
+
+        /* Select the text field */
+        copyText.select();
+        copyText.setSelectionRange(0, 99999); /*For mobile devices*/
+
+        /* Copy the text inside the text field */
+        document.execCommand("copy");
+
+        /* Alert the copied text */
+        alert("Copied the text: " + copyText.value);
+      }
+    </script>
   </div>
 
   <div class="col-md-5" align="center" style="color: #D4AF37; margin-left: 10%; margin-top: 5%;">
@@ -31,11 +60,11 @@
 
             <div class="col-md-6">
                 <h4>Followers</h4>
-                <h4><%= link_to @user.followers_count, followers_path(@user), :style => "color:black;" %></h4>
+                <h4><%= link_to @user.followers_count, followers_user_path(@user), :style => "color:black;" %></h4>
             </div>
             <div class="col-md-6">
                 <h4>Following</h4>
-               <h4><%= link_to @user.followees_count, following_path(@user), :style => "color:black;" %></h4>
+               <h4><%= link_to @user.follow_count, following_user_path(@user), :style => "color:black;" %></h4>
             </div>
 
 
@@ -43,13 +72,15 @@
 
           <div class="row" align="center" style="font-size: 25px; margin: 2%;">
 
-            <% if current_user.follows?(@user) %>
+            <% if current_user.following?(@user) %>
 
-              <%= link_to('Unfollow', unfollow_user_path(@user), :style => "color: #D4AF37; background-color: black", class: "btn", method: :post) %>
+              <!-- <#%= link_to('Unfollow', unfollow_user_path(@user), :style => "color: #D4AF37; background-color: black", class: "btn", method: :post) %> -->
+              <%= button_to "Following", {action: 'unfollow', id: @user.id}, method: 'post', class: 'btn-secondary btn-unfollow header-align' %>
 
                   <% else %>
 
-              <%= link_to('Follow', follow_user_path(@user), :style => "color: #D4AF37; background-color: black", class: "btn", method: :post) %>
+              <!-- <#%= link_to('Follow', follow_user_path(@user), :style => "color: #D4AF37; background-color: black", class: "btn", method: :post) %> -->
+              <%= button_to "Follow", {action: 'follow', id: @user.id}, method: 'post', class: 'btn-secondary btn-follow header-align' %>
 
             <% end %>
           </div> 
